# srs-simulator

./: .gitignore  AGENTS.md  README.md  pyproject.toml  simulate.py
benches/: README.md  run_batched_bench.py  run_bench.py
config/: dash.json  fsrs3.json  fsrs6.json  hlr.json  lstm.json
experiments/retention_sweep/: aggregate_users.py  build_pareto.py  build_pareto_users.py  cli_utils.py  dominance.py  dominance_sm2_memrise.py  export_user_results.py  max_dr_distribution.py  plot_batch_gpu_memory.py  plot_daily_curves.py  plot_gpu_memory.py  plot_short_loops.py  run_sweep.py  run_sweep_users.py  run_sweep_users_batched.py
simulator/: __init__.py  behavior.py  benchmark_loader.py  button_usage.py  config_loader.py  core.py  cost.py  defaults.py  fanout.py  fsrs_defaults.py  fuzz.py  lstm_utils.py  scheduler_spec.py  short_term.py  short_term_config.py  sspmmc_policy.py  subprocess_progress.py  subprocess_runner.py  sweep_utils.py  vectorized.py
simulator/batched_sweep/: __init__.py  behavior_cost.py  execution.py  logging.py  plan.py  runner.py  utils.py  weights.py
simulator/math/: dash.py  fsrs.py  fsrs_batch.py
simulator/models/: __init__.py  dash.py  fsrs.py  hlr.py  lstm.py  lstm_batch.py
simulator/retention_sweep/: __init__.py  grid.py  overrides.py  sspmmc.py
simulator/schedulers/: __init__.py  anki_sm2.py  dash.py  fixed.py  fsrs.py  hlr.py  lstm.py  memrise.py  sspmmc.py
simulator/vectorized/: __init__.py  engine.py  fuzz.py  math.py  multiuser.py  multiuser_engine.py  registry.py  (+2 more)
tests/: sanity_lstm_forward_calls.py  test_lstm_scheduler.py
